# E2E-CommVQ

./: A100_QUICKSTART.md  E2E_COMMVQ_GUIDE.md  E2E_IMPLEMENTATION_SUMMARY.md  E2E_TRAINING_FLOW.md  LICENSE  README.md  pyproject.toml
commvq/: compress_evaluation.py  compress_training.py  compress_triton.py  modeling_llama_collect_kv.py  modeling_llama_evaluation.py  modeling_llama_training.py  modeling_llama_triton.py  triton_kernels.py
evaluation/: EVALUATION_GUIDE.md  TMUX_GUIDE.md  compare_models.sh  run_single_benchmark.sh
evaluation/infiniteBench/src/: args.py  compute_scores.py  eval_commvq.py  eval_utils.py  prompt.py  run_code_debug.sh  run_kv_retrieval.sh  run_longbook_choice_eng.sh  run_longbook_qa_eng.sh  run_longbook_sum_eng.sh  run_longdialogue_qa_eng.sh  run_math_find.sh  run_number_string.sh  run_passkey.sh
evaluation/longbench/: .gitignore  eval.py  pred.py
evaluation/memory_measurement/: eval_memory.py  eval_memory.sh
evaluation/niah/: .gitignore  run.sh  run_needle_in_haystack.py  viz.py
training/: .gitignore  bv-interactive.sh  bv-submit-1gpu.sh  check_data.py  collect_kv.py  collect_kv.sh  collect_kv_for_e2e.py  finetune.py  make_scale.py  quantize_key_cache.py  quantize_key_cache.sh  quantize_key_cache_e2e.sh  test_e2e_compatibility.py  test_e2e_single_batch.py  test_e2e_small.py  test_forward_only.py  train_e2e_key_codebook.sh
training/finetune/: ds_config_zero2_cosine.json  llama3.1_70b_int1.sh  llama3.1_70b_int2.sh  llama3.1_8b_int1.sh  llama3.1_8b_int2.sh  mistral_7b_v3_int2.sh  qwen7b_int1.sh  qwen7b_int2.sh
(+21 files in other folders)
